# stars_automator

./: .gitignore  .pre-commit-config.yaml  README.md  example_config.json  pyproject.toml  stars_automator.cfg
experiments/: bulk_decode_fleets.py  count_planet_caps.py  decode_ai_starting_fleets.py  generate_fleet_games.py  generate_ship_experiment_races.py  map_generator.py  oracle_starting_state.py  r0_7_unload_oracle.py  r3_1_homeworld_placement.py  r3_6_homeworld_distribution.py  run_bbs_phase1.py  run_bbs_phase2.py  setup_fleet_experiment.py
experiments/oracle_configs/: r3_2_planet_caps.json
experiments/oracle_configs/r2_6/: _base_race_joat_ife.json  baseline_mineral_survey.json  bbs_it_gr10.json  bbs_it_gr15.json  bbs_joat_gr05.json  bbs_joat_gr10.json  bbs_joat_gr10_lsp.json  bbs_joat_gr14.json  bbs_joat_gr15.json  bbs_joat_gr15_lsp.json  bbs_joat_gr20.json  bbs_mineral_survey.json  bbs_pp_gr05.json  bbs_pp_gr10.json  bbs_pp_gr14.json  bbs_pp_gr15.json  generate_configs.py  phase1_results.json  phase2_results.json
experiments/oracle_configs/r3_1/: results.json
experiments/oracle_configs/r3_4/: distribution_results.json
experiments/oracle_configs/r3_6/: distribution.json  scaling.json  second_planet.json
stars_automator/: _cli.py  config.py  dump.py  game.py  ini.py  turns.py  ui.py  wine.py  x1.py
